fix text-overflow

--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 30px;
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -40,5 +39,18 @@
     font-size: 14px;
     padding: 8px;
     margin-left: 5px;
+  }
+}
+
+.text {
+  width: 320px;
+  overflow-wrap: break-word;
+  text-align: justify;
+  margin: 0;
+}
+
+@media (max-width: 600px) {
+  .text {
+    width: 180px;
   }
 }
